<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/relative1"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">

    <EditText
        android:id="@+id/cal_editText"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentStart="true"
        android:layout_alignParentLeft="true"
        android:layout_alignParentTop="true"
        android:layout_marginStart="0dp"
        android:layout_marginLeft="0dp"
        android:layout_marginTop="135dp" />


    <Button
        android:id="@+id/button_1"
        style="?android:attr/buttonStyleSmall"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/cal_editText"
        android:layout_alignEnd="@+id/button_4"
        android:layout_alignRight="@+id/button_4"
        android:layout_marginTop="96dp"
        android:layout_marginEnd="2dp"
        android:layout_marginRight="2dp"
        android:text="@string/number1" />

    <Button
        android:id="@+id/button_2"
        style="?android:attr/buttonStyleSmall"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignTop="@+id/button_1"
        android:layout_marginTop="0dp"
        android:layout_marginEnd="27dp"
        android:layout_marginRight="27dp"
        android:layout_toStartOf="@+id/button_3"
        android:layout_toLeftOf="@+id/button_3"
        android:text="@string/number2" />

    <Button
        android:id="@+id/button_3"
        style="?android:attr/buttonStyleSmall"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignTop="@+id/button_2"
        android:layout_centerHorizontal="true"
        android:text="@string/number3" />

    <Button
        android:id="@+id/button_4"
        style="?android:attr/buttonStyleSmall"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/button_1"
        android:layout_marginTop="2dp"
        android:layout_marginRight="34dp"
        android:layout_toLeftOf="@+id/button_2"
        android:text="@string/number4" />

    <Button
        android:id="@+id/button_5"
        style="?android:attr/buttonStyleSmall"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignBottom="@+id/button_4"
        android:layout_alignLeft="@+id/button_2"
        android:layout_alignStart="@+id/button_2"
        android:text="@string/number5" />

    <Button
        android:id="@+id/button_6"
        style="?android:attr/buttonStyleSmall"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@+id/button_3"
        android:layout_alignStart="@+id/button_3"
        android:layout_below="@+id/button_3"
        android:text="@string/number6" />

    <Button
        android:id="@+id/button_7"
        style="?android:attr/buttonStyleSmall"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/button_4"
        android:layout_marginTop="2dp"
        android:layout_marginRight="35dp"
        android:layout_toLeftOf="@+id/button_2"
        android:text="@string/number7" />

    <Button
        android:id="@+id/button_8"
        style="?android:attr/buttonStyleSmall"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@+id/button_5"
        android:layout_alignStart="@+id/button_5"
        android:layout_below="@+id/button_5"
        android:text="@string/number8" />

    <Button
        android:id="@+id/button_9"
        style="?android:attr/buttonStyleSmall"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@+id/button_6"
        android:layout_alignStart="@+id/button_6"
        android:layout_below="@+id/button_6"
        android:text="@string/number9" />

    <Button
        android:id="@+id/button_add"
        style="?android:attr/buttonStyleSmall"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignEnd="@+id/cal_editText"
        android:layout_alignRight="@+id/cal_editText"
        android:layout_alignTop="@+id/button_3"
        android:layout_marginLeft="46dp"
        android:layout_marginStart="46dp"
        android:layout_toRightOf="@+id/button_3"
        android:text="@string/add" />

    <Button
        android:id="@+id/button_subtract"
        style="?android:attr/buttonStyleSmall"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignEnd="@+id/button_add"
        android:layout_alignLeft="@+id/button_add"
        android:layout_alignRight="@+id/button_add"
        android:layout_alignStart="@+id/button_add"
        android:layout_below="@+id/button_add"
        android:text="@string/sub" />

    <Button
        android:id="@+id/button_multiply"
        style="?android:attr/buttonStyleSmall"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@+id/button_subtract"
        android:layout_alignParentEnd="true"
        android:layout_alignParentRight="true"
        android:layout_alignStart="@+id/button_subtract"
        android:layout_below="@+id/button_subtract"
        android:text="@string/mult" />

    <Button
        android:id="@+id/button_10"
        style="?android:attr/buttonStyleSmall"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/button_7"
        android:layout_marginTop="0dp"
        android:layout_marginRight="34dp"
        android:layout_toLeftOf="@+id/button_2"
        android:text="@string/number10" />

    <Button
        android:id="@+id/button_0"
        style="?android:attr/buttonStyleSmall"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@+id/button_8"
        android:layout_alignStart="@+id/button_8"
        android:layout_below="@+id/button_8"
        android:text="@string/number0" />

    <Button
        android:id="@+id/button_clear"
        style="?android:attr/buttonStyleSmall"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@+id/button_9"
        android:layout_alignStart="@+id/button_9"
        android:layout_below="@+id/button_9"
        android:text="@string/clear" />

    <Button
        android:id="@+id/button_division"
        style="?android:attr/buttonStyleSmall"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignEnd="@+id/button_multiply"
        android:layout_alignLeft="@+id/button_multiply"
        android:layout_alignRight="@+id/button_multiply"
        android:layout_alignStart="@+id/button_multiply"
        android:layout_below="@+id/button_multiply"
        android:text="@string/div" />

    <Button
        android:id="@+id/button_equal"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/button_0"
        android:layout_alignStart="@+id/button_10"
        android:layout_alignLeft="@+id/button_10"
        android:layout_alignEnd="@+id/button_division"
        android:layout_alignRight="@+id/button_division"
        android:layout_marginStart="-9dp"
        android:layout_marginLeft="-9dp"
        android:layout_marginTop="34dp"
        android:layout_marginEnd="10dp"
        android:layout_marginRight="10dp"
        android:text="@string/equal" />

</RelativeLayout>